2014-11-03: Original commit
2014-12-01: Changing name to cicserver
2014-12-09: Adding ICSurvey class
2014-12-17: Fixing cicserver-install-run path
2014-12-17: Fixed cic_icws_installed custom fact & minor fixes
2014-12-18: Adding missing loggedonuserpassword parameter
2014-12-19: Finetuning ic server install parameters
2014-12-19: Removing unnecessary files
2014-12-22: Using powershell instead of psexec
2014-12-22: Added ICServer dependency to Setup Assistant
2014-12-23: Fixed survey directory creation
2014-12-23: Using Start-Process to wait for msiexec to finish for CIC server install
2014-12-23: Using powershell script to install CIC server
2014-01-03: Replaced unless option by onlyif when running setup assistant
2015-01-15: No need to start the Interaction Center service after running setup assistant
2015-01-19: Changed how copies work. Now supports UNC paths and URLs
2015-01-20: Using cache_dir all the way
2015-01-22: Using package to install media server
2015-01-23: removed mediaserverlicensefile parameter
2015-01-27: Fixed media server license copy issue
2015-01-28: Set Interaction Center service to automatic
2015-01-30: Removing unnecessary script parameters
2015-02-08: Changing paths