@@ -21,3 +21,4 @@
 2015-01-28: Set Interaction Center service to automatic
 2015-01-30: Removing unnecessary script parameters
 2015-02-08: Changing paths
+2015-02-11: Removing hostid
